--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
         function ZbieranieLevel()
         {
+            GeneralLevel();
             if(zbieranieExp >= 250 && zbieranieL < 2)
             {
                 zbieranieEnergy -= 0.5;
@@ -137,7 +138,7 @@
                 zbieranieEnergy -= 1;
                 zbieranieL = 5;
 
-                if(localStorage.zbieranie4flag == "true")
+                if(localStorage.zbieranie5flag == "true")
                 { }
                 else
                 {
@@ -151,6 +152,7 @@
         }
         function JumpLevel()
         {
+            GeneralLevel();
             if(jumpExp >= 250 && jumpL < 2)
             {
                 jumpEnergy -= 0.5;
@@ -167,9 +169,9 @@
             if(jumpExp >= 600 && jumpL < 3)
             {
                 jumpEnergy -= 0.5;
-                jumpL = 2;
+                jumpL = 3;
 
-                if(localStorage.jump2flag != "true")
+                if(localStorage.jump3flag != "true")
                 {
                     document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 3 podróżowania<br>Energia potrzebna do podróżowania zmiejszona o 0.5";
                     document.getElementById("Msg").style.display = "block";
@@ -180,9 +182,9 @@
             if(jumpExp >= 1000 && jumpL < 4)
             {
                 jumpEnergy -= 0.5;
-                jumpL = 2;
+                jumpL = 4;
 
-                if(localStorage.jump2flag != "true")
+                if(localStorage.jump4flag != "true")
                 {
                     document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 2 podróżowania<br>Energia potrzebna do podróżowania zmiejszona o 0.5";
                     document.getElementById("Msg").style.display = "block";
@@ -193,9 +195,9 @@
             if(jumpExp >= 250 && jumpL < 2)
             {
                 jumpEnergy -= 0.5;
-                jumpL = 2;
+                jumpL = 5;
 
-                if(localStorage.jump2flag != "true")
+                if(localStorage.jump5flag != "true")
                 {
                     document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 2 podróżowania<br>10% szansy na zabranie o połowe mniej energii przy podróży";
                     document.getElementById("Msg").style.display = "block";
@@ -1022,6 +1024,18 @@
             display:none;
             z-index:1;
         }
+        .MsgIntro
+        {
+            position:absolute;
+            z-index:5;
+            background-color:#bbb;
+            width:50vw;
+            height:25vh;
+            left:25vw;
+            top:10vh;
+            text-align:center;
+            color:black;
+        }
         .Msg
         {
             position:absolute;
@@ -1029,8 +1043,9 @@
             background-color:#bbb;
             width:50vw;
             height:50vh;
+            max-height:75vh;
             left:25vw;
-            top:25vh;
+            top:10vh;
             text-align:center;
             color:black;
         }
@@ -1081,6 +1096,16 @@
             position:relative;
             top:5vh;
         }
+        .LevelYes
+        {
+            position:absolute;
+            left:20%;
+            top:40%;
+            background-color:lawngreen;
+            padding:5%;
+            width:10%;
+            cursor:pointer;
+        }
     </style>
 </head>
 <body>
@@ -1090,20 +1115,20 @@
     <div id="MapGenerateButton" onclick="MapGenerate('first')">Prześpij sie na ławeczce</div>
     <div id="SaveWipeButton" onclick="document.getElementById('SaveWipeConfirmation').style.display='block'">Usuń zapis gry</div>
     <div id="SaveWipeConfirmation" style="display:none;"><div class="WipeMsg">Czy na pewno chcesz to zrobić?</div><div class="WipeYes" onclick="localStorage.clear(); document.getElementById('SaveWipeConfirmation').style.display='none'; location.reload()">Tak</div><div class="WipeNo" onclick="document.getElementById('SaveWipeConfirmation').style.display='none';">Nie</div></div>
-    <div class="Msg" style="display:none;"><div id="MsgContent">Czy na pewno chcesz to zrobić?</div><div id="MsgYes" onclick="document.getElementById('Msg').style.display='none';">OK</div></div>
+    <div class="Msg" id="Msg" style="display:none;"><div id="MsgContent">Czy na pewno chcesz to zrobić?</div><div class="LevelYes" onclick="document.getElementById('Msg').style.display='none';">OK</div></div>
 
     <div id="gownoButton" onclick="IntroToggle()">Intro</div>
     <div id="gownoWarning" class="Msg" style="display:none; height:50vw;">
         <div class="MsgContent">Czy na pewno chcesz to zrobić? Przejście dalej może skutkować poważną traumą i depresją do końca życia!</div>
         <div class="MsgYes gownoYN" style="bottom:0px;" onclick="Intro()">Tak :(</div>
         <div class="MsgNo gownoYN" style="bottom:0px;" onclick="IntroToggle()">Nie :)</div>
-        <video id="intro" width="600px" height="400px" style="display:none">
+        <video id="intro" style="display:none; width:45vw; height:40vh;">
             <source src="intro.mp4" type="video/mp4"></source>
         </video>
         <div></div>
     </div>
 
-    <div id="zulEnergy">100.00</div>
+    <div id="zulEnergy">200.00</div>
     <div id="mapContainer">
     <div id="map">
         
