--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124831747-1"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-124831747-1');
+            </script>
+
     <meta charset="utf-8" />
     <title>Zbieracze</title>
     <script>
@@ -15,6 +25,16 @@
         let zbieranieEnergy = 10;
         let jumpEnergy = 20;
 
+        let zulEq = {
+            head: null,
+            torso: {
+                zulEnergy: 0,
+            },
+            arms: null,
+            gloves: null,
+            legs: null,
+            boots: null,
+        };
 
         let itemlist = [
             {
@@ -74,6 +94,16 @@
                 img: "CUkabel.jpg",
                 rarity: "white",
                 exp: 10,
+            },
+            {
+                //7
+                id: 7,
+                name: "Brudny sweterek",
+                value: 100,
+                img: "bsweter.png",
+                cb: '',
+                rarity: "white",
+                exp: 10
             }
         ];
 
@@ -186,20 +216,20 @@
 
                 if(localStorage.jump4flag != "true")
                 {
-                    document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 2 podróżowania<br>Energia potrzebna do podróżowania zmiejszona o 0.5";
+                    document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 4 podróżowania<br>Energia potrzebna do podróżowania zmiejszona o 0.5";
                     document.getElementById("Msg").style.display = "block";
                     localStorage.jumpL = 4;
                     localStorage.jump4flag = true;
                 }
             }
-            if(jumpExp >= 250 && jumpL < 2)
+            if(jumpExp >= 1500 && jumpL < 5)
             {
                 jumpEnergy -= 0.5;
                 jumpL = 5;
 
                 if(localStorage.jump5flag != "true")
                 {
-                    document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 2 podróżowania<br>10% szansy na zabranie o połowe mniej energii przy podróży";
+                    document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 5 podróżowania<br>10% szansy na zabranie o połowe mniej energii przy podróży";
                     document.getElementById("Msg").style.display = "block";
                     localStorage.jumpL = 5;
                     localStorage.jump5flag = true;
@@ -254,7 +284,7 @@
                 GeneralL = 5;
                 if(localStorage.general5flag != "true")
                 {
-                    document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 5 żula<br>Energia zwiększona o 100 chuju";
+                    document.getElementById("Msg").childNodes[0].innerHTML = "Otrzymałeś poziom 5 żula<br>Energia zwiększona o 100";
                     document.getElementById("Msg").style.display = "block";
                     localStorage.generalL = 5;
                     localStorage.general5flag = true;
@@ -432,8 +462,11 @@
                         {
                             if(zulInv[i].amount == undefined)
                             {
+                                if(resetmode != 1)
+                                {
                                 zbieranieExp += zulInv[i].exp;
                                 GeneralExp += zulInv[i].exp;
+                                }
                                     zulInv[i].amount = 1;
                                 InvReset(resetmode);
                                 break;
@@ -441,8 +474,11 @@
                             else
                             {
                                 zulInv[i].amount += 1;
+                                if(resetmode != 1)
+                                {
                                 zbieranieExp += zulInv[i].exp;
                                 GeneralExp += zulInv[i].exp;
+                                }
                                 InvReset(resetmode);
                                 break;
                             }
@@ -455,15 +491,20 @@
                     if(zulInv[pushIndex].amount == undefined)
                     {
                         zulInv[pushIndex].amount = 1;
+                        if(resetmode != 1)
+                        {
                         zbieranieExp += zulInv[pushIndex].exp;
                         GeneralExp += zulInv[pushIndex].exp;
+                        }
                         InvReset(resetmode);
                     }
                     else
                     {
                         zulInv[pushIndex].amount += 1;
+                        {
                         zbieranieExp += zulInv[pushIndex].exp;
                         GeneralExp += zulInv[pushIndex].exp;
+                        }
                         InvReset(resetmode);
                     }
                 }
