--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             </script>
 
     <meta charset="utf-8" />
-    <title>Zbieracze</title>
+    <meta name="description" content="Zbieracze to gra o żulu który grzebie w śmieciach w celu poszukiwania wartościowych przedmiotów i zostania najlepszym żulem w okolicy" />
+            
+            
+    <title>Zbieracze - Gra</title>
     <script>
         let zulX = 0;
         let zulY = 0;
