--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-            <!-- Global site tag (gtag.js) - Google Analytics 
+            <!-- Global site tag (gtag.js) - Google Analytics  -->
             <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124831747-1"></script>
             <script>
             window.dataLayer = window.dataLayer || [];
@@ -9,7 +9,7 @@
             gtag('js', new Date());
 
             gtag('config', 'UA-124831747-1');
-            </script> -->
+            </script>
 
     <meta charset="utf-8" />
     <meta name="description" content="Zbieracze to gra o żulu który grzebie w śmieciach w celu poszukiwania wartościowych przedmiotów i zostania najlepszym żulem w okolicy" />
