--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="author" content="Oddział Specjalnej Troski"/>
     <title>Zbieracze</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124831747-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124831747-1');
+</script>
+
+    
     <script>
         let zulX = 0;
         let zulY = 0;
