Fix the original game link

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </main>
         <div id="linkButtons">
             <div class="linkContainer"><a href="Zbieracze.rar"> Pobierz </a></div>
-            <div class="linkContainer" style="align-items: flex-start;"><a href="/zbieracze.html"> Oryginalni <br> Zbieracze </a></div>
+            <div class="linkContainer" style="align-items: flex-start;"><a href="/zbieracze/zbieracze.html"> Oryginalni <br> Zbieracze </a></div>
         </div>
     </div>
     
